--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 		<meta charset="utf-8">
 		<title>instagram links</title>
 		<link rel="stylesheet" type="text/css" href="./instagramStyle.css">
-		<link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto&display=swap" rel="stylesheet">
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 	</head>
 	<body>
 		<div id="root"></div>
+		test2
 	</body>
 </html>
