--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,9 @@
 	<head>
 		<meta charset="utf-8">
 		<title>instagram links</title>
-		<link rel="stylesheet" type="text/css" href="./instagramStyle.css">
+		<link rel="stylesheet" type="text/css" href="/instagramStyle.css">
 		<link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto&display=swap" rel="stylesheet">
-		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+		<link rel="manifest" href="/manifest.json" />
 	</head>
 	<body>
 		<div id="root"></div>
