--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>instagram links</title>
+		<title>@kellycraftng Instagram Posts</title>
 		<link rel="stylesheet" type="text/css" href="/instagramStyle.css">
 		<link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto&display=swap" rel="stylesheet">
 		<link rel="manifest" href="/manifest.json" />
