--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,9 @@
 		<meta charset="utf-8">
 		<title>@kellycraftng Instagram Posts</title>
 		<link rel="stylesheet" type="text/css" href="/instagramStyle.css">
-		<link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto&display=swap" rel="stylesheet"><link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+		<link rel="icon" type="image/png" href="%PUBLIC_URL%/favicon-32x32.png" sizes="32x32" />
+		<link rel="icon" type="image/png" href="%PUBLIC_URL%/favicon-16x16.png" sizes="16x16" />	
 		<link rel="manifest" href="/manifest.json" />
 	</head>
 	<body>
